# Video-Converter-Project

./: .gitignore  README.md  docker-compose.debug.yaml  docker-compose.yaml
authentication/: .env  .secret.env  Dockerfile  main.py  pyproject.toml
authentication/database/: __init__.py  crud.py  models.py  schemas.py
authentication/forms/: __init__.py  authentication.py
authentication/manifests/: auth-deploy.yaml  configmap.yaml  secret.yaml  service.yaml
authentication/security/: models.py  schemas.py  utils.py
authentication/settings/: __init__.py
converter/: .env  Dockerfile  main.py  pyproject.toml
converter/db/: client.py
converter/manifests/: configmap.yaml
converter/mq/: __init__.py
converter/utils/: convert.py
gateway/: .env  Dockerfile  client.py  main.py  pyproject.toml
gateway/forms/: authentication.py
gateway/manifests/: configmap.yaml  gateway-deployment.yaml  ingress.yaml  service.yaml
gateway/mongodb/: __init__.py  db.py  get_file.py  save_file.py
gateway/mq/: __init__.py
gateway/utils/: __init__.py  file_ops.py  login.py
notification/: .env  Dockerfile  main.py  pyproject.toml
notification/manifests/: configmap.yaml  notification-deployment.yaml
notification/mq/: __init__.py
rabbitmq/manifests/: service.yaml  statefulset.yaml
